# ros2_aroma_diffuser_robot_v2

./: .gitignore  PROJECT_COMPLETION_SUMMARY.md  README.md  build_codespaces.sh  demo_commands.md  final_report.md  final_validation_log.txt  repair_and_validate_ros2_project.sh  setup.sh  validation_report.md
screenshots/: README.md
src/lab01_ros2_basics/: LAB_GUIDE.md  package.xml  setup.cfg  setup.py
src/lab01_ros2_basics/lab01_ros2_basics/: __init__.py  publisher_node.py  subscriber_node.py
src/lab01_ros2_basics/launch/: basics_launch.py
src/lab01_ros2_basics/resource/: lab01_ros2_basics
src/lab02_nav2_slam_mission_control/: package.xml  setup.cfg  setup.py
src/lab02_nav2_slam_mission_control/config/: nav2_params.yaml  slam_params.yaml
src/lab02_nav2_slam_mission_control/lab02_nav2_slam_mission_control/: __init__.py  mission_controller_node.py  robot_location_monitor_node.py
src/lab02_nav2_slam_mission_control/launch/: mission_launch.py  nav2_launch.py  sim_launch.py  slam_launch.py
src/lab02_nav2_slam_mission_control/rviz/: nav2_default_view.rviz
src/lab02_nav2_slam_mission_control/worlds/: indoor_world.world
src/lab03_aroma_diffuser_robot_mission/: package.xml  setup.cfg  setup.py
src/lab03_aroma_diffuser_robot_mission/lab03_aroma_diffuser_robot_mission/: __init__.py  aroma_diffuser_node.py  aroma_mission_node.py
src/lab03_aroma_diffuser_robot_mission/launch/: aroma_mission_launch.py
videos/: README.md
