<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>lab02_nav2_slam_mission_control</name>
  <version>0.0.1</version>
  <description>Lab 2: Navigation, SLAM, and Mission Control</description>
  <maintainer email="ros2@example.com">ROS 2 Developer</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_core</depend>
  <depend>nav2_common</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>