<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>lab03_aroma_diffuser_robot_mission</name>
  <version>0.0.1</version>
  <description>Lab 3: Aroma Diffuser Robot Mission Control</description>
  <maintainer email="ros2@example.com">ROS 2 Developer</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>